# tokengrams

./: .gitignore  Cargo.toml  LICENSE.md  README.md  environment.yml  prototyping.ipynb  pyproject.toml  sushi-prototyping.ipynb  sushi-table.rs  tokengrams.pyi
.cargo/: config.toml
.github/workflows/: publish-wheel.yml  publish.yml  python-package-conda.yml  python.yml
demos/: generate_text.ipynb
src/: architecture.md  countable.rs  countable_index.rs  ef_trie_array.rs  gram.rs  gram_counter.rs  gram_index.rs  in_memory_index.rs  in_memory_index_rs.rs  lib.rs  loader.rs  main.rs  mappers.rs  memmap_index.rs  memmap_index_rs.rs  merge.rs  mmap_slice.rs  par_quicksort.rs  parser.rs  rank_array.rs  record.rs  sa_is.rs  sais.rs  sample.rs  sampler.rs  sampler_rs.rs  sharded_in_memory_index.rs  sharded_memmap_index.rs  sharded_memmap_index_rs.rs  sucds_glue.rs  sushi_sort.rs  table.rs  tmp-2.rs  tmp.rs  token.rs  trie.rs  trie_array.rs  trie_count_lm.rs  trie_lm.rs  trie_prob_lm.rs  (+2 more)
src/bindings/: in_memory_index.rs  memmap_index.rs  mod.rs  sharded_in_memory_index.rs  sharded_memmap_index.rs
src/gram/: token_gram.rs  word_gram.rs
src/loader/: flate2.rs  plain.rs
src/rank_array/: ef.rs  simple.rs
src/trie_array/: ef.rs  simple.rs
src/trie_count_lm/: builder.rs  lookuper.rs
src/trie_lm/: builder.rs  lookuper.rs
src/trie_prob_lm/: builder.rs
src/vocabulary/: identity.rs  simple.rs  yada.rs
tests/: tests.rs
tokengrams/: __init__.py  sharded_index.py  tokengrams.pyi
tokengrams/benchmark/: benchmark.py  benchmark_plot.py
tokengrams/src/: index.py
tokengrams/tests/: benchmark.py  test_gram_index.py  test_sampler.py  test_sharded_index.py  test_synthetic.py  test_typed_index.py
tokengrams/utils/: tokenize_hf_dataset.py
