[package]
name = "tokengrams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tokengrams"
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.3"
funty = "2.0.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
memmap2 = "0.9.4"
pyo3 = { version = "0.20.1", features = ["extension-module"] }
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
utf16_literal = "0.2.1"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
quickcheck = { version = "0.9", default-features = false }
rand = "0.8.4"
